added the search feature by useing useReducer, and ContextAPI

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,7 +19,7 @@ $color-darkGrey: #282c34;
         padding: 40px;
         background-color: white;
         color: $color-darkGrey;
-        min-width: 75vh;
+        //min-width: 75vh; note: --> Not sure Why I have this.
 
     }
 
